# ee

./: .gitignore  CMakeLists.txt
include/: buffer.h  list.h  operator.h  parser.h  result.h  tensor.h  token.h
src/: buffer.c  main.c  operator.c  parser.c  result.c  tensor.c  token.c
